Fix jumping and jittering hover effect on top navigation items

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ h3, h4 {
 
 .navbar .navbar-nav .nav-link {
   color: var(--background-light);
-  border-bottom: solid var(--secondary-accent) 0em;
+  border-bottom: solid transparent .17em;
   margin-right: 1.5em;
   padding: 0;
   transition: .3s ease-in-out;
@@ -117,7 +117,7 @@ h3, h4 {
 }
 
 .navbar .navbar-nav .nav-link:hover {
-  border-bottom: solid var(--secondary-accent) .17em;
+  border-bottom-color: var(--secondary-accent);
 }
 
 .navbar .nav-item:last-child .nav-link {
